[package]
name = "snowcast_dilly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "server"
# path = "src/server/bin/main.rs"
# 
# [[bin]]
# name = "client"
# path = "src/client/bin/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "simple_server"
path = "src/bin/simple_server.rs"

[[bin]]
name = "simple_client"
path = "src/bin/simple_client.rs"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"

